--- a/style.css
+++ b/style.css
@@ -1,17 +1,27 @@
 @import url('https://fonts.googleapis.com/css2?family=Ropa+Sans:ital@0;1&display=swap');
+
+html {
+    font-size: 80%;
+}
+
+
+
 body {
     font-family: 'Ropa Sans', sans-serif;
     margin: 0;
     padding: 0;
     color: #777777;
-    width: 728px;
+    width: 100vw;
+}
+body * {
+    box-sizing: border-box;
 }
 
 body > header{
-    padding: 8px 44px;
-    font-size: 18px;
-    line-height: 20px;
-    box-shadow: 1px 1px 1px grey;
+    padding:1rem 2rem;
+    font-size: 1rem;
+    line-height: 1rem;
+    box-shadow: .1rem .1rem 1rem grey;
 }
 header > * {
     display: inline-block;
@@ -21,19 +31,30 @@ body > header > img {
     float: right;
     margin-top: 16px;
 }
+body> main {
+    width: 100%;
+}
+
 #banner {
-    margin: 13px 55px;
+    padding: 1rem;
+    width: 100%;
 
 }
+
+#banner > img {
+    width: 100%;
+}
 #sales {
-    margin: 10px 44px;
+   padding: 0 1rem;
+    width: 100%;
 }
 #sales > article {
-    display: inline-block;
-    width: 40%;
+    width: 100%;
+    margin-bottom: 1rem;
 }
-#sales > article #right-sale {
-    float: right;
+#sales > article img {
+width: 100%;
+margin-bottom: -.5rem;
 }
 #sales article > footer {
     padding: 12px;
@@ -41,21 +62,57 @@ body > header > img {
 }
 #sales span {
     font-size: 25px;
-    line-height: 23px;
-    position: justify;
-    width: 54px;
-    height: 20px;
-    background-color: burlywood;
-    border-radius: 10.5px;
+    line-height: 27px;
+ 
 }
-#your-style img {
-    opacity: 0.6;
-    font-weight: 400;
-    font-size: 25px;
-    line-height: 25px;
-    display: flex;
-    align-items: center;
+.right {
+    border-radius: 1.5rem;;
+    background-color: green;
+    color: white;
+    padding: 0 1rem;
+    float: right;
+}
+.right.sale {
+    background-color: #DC9730;
+}
+
+#your-style {
+    padding: 0 1rem;
+}
+#your-style * {
+    width: 100%;
     text-align: center;
-    color: #FFFF;
-    text-shadow: 3px 3px 6px black rgba(0, 0, 0)
+}
+
+
+.opaque {
+    opacity: 0.5;
+}
+.styles {
+    min-height: 5rem;
+    padding-top: 2rem;
+    color: white;
+    margin-bottom: 1rem;
+}
+.styles span {
+    font-size: 1.5rem;
+    text-shadow: .1rem .1rem  black;
+}
+.industrial {
+    background-image: url('./lovt/Rectangle\ 11.png');
+}
+.modern {
+    background-image: url('./lovt/Rectangle\ 12.png');
+}
+.classic {
+    background-image: url('./lovt/Rectangle\ 13.png');
+}
+
+footer {
+    width: 100%;
+    padding: 1rem 1rem;
+    background-color: #333333;
+}
+footer > #gmaps {
+    width: 100%;
 }
