--- a/style.css
+++ b/style.css
@@ -1,118 +1,209 @@
-@import url('https://fonts.googleapis.com/css2?family=Ropa+Sans:ital@0;1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ropa+Sans&display=swap');
+
+/* Medidas CSS
+  pixels: 1px
+  viewport: vw / vh (relativos)
+  fonte geral: rem (relativo) - elemento html
+  fonte do escopo: em (relativo) - elemento pai
+  %: relativa - elemento pai
+*/
 
 html {
-    font-size: 80%;
+  font-size: 80%;
 }
 
-
-
+/* Seletor CSS */
 body {
-    font-family: 'Ropa Sans', sans-serif;
-    margin: 0;
-    padding: 0;
-    color: #777777;
-    width: 100vw;
-}
-body * {
-    box-sizing: border-box;
+  font-family: 'Ropa Sans', sans-serif;
+  margin: 0;
+  padding: 0;
+  color: #888888;
+  width: 100%;
 }
 
-body > header{
-    padding:1rem 2rem;
-    font-size: 1rem;
-    line-height: 1rem;
-    box-shadow: .1rem .1rem 1rem grey;
+body * {
+  box-sizing: border-box;
 }
+
+body > header {
+  padding: 1rem 2rem;
+  font-size: 1rem;
+  line-height: 1rem;
+  box-shadow: .1rem .1rem 1rem gray;
+}
+
 header > * {
-    display: inline-block;
-    margin: 0;
+  display: inline-block;
+  margin: 0;
 }
+
 body > header > img {
-    float: right;
-    margin-top: 16px;
+  float: right;
+  margin-top: 16px;
 }
-body> main {
-    width: 100%;
+
+body > main {
+  width: 100%;
 }
 
 #banner {
-    padding: 1rem;
-    width: 100%;
-
+  padding: 1rem;
+  width: 100%;
 }
 
 #banner > img {
-    width: 100%;
+  width: 100%;
 }
+
 #sales {
-   padding: 0 1rem;
-    width: 100%;
+  padding: 0 1rem;
+  width: 100%;
 }
+
 #sales > article {
-    width: 100%;
-    margin-bottom: 1rem;
+  width: 100%;
+  margin-bottom: 1rem;
 }
+
 #sales > article img {
-width: 100%;
-margin-bottom: -.5rem;
+  width: 100%;
+  margin-bottom: -.5rem
 }
-#sales article > footer {
-    padding: 12px;
-    background-color: #EEEEEE;
+
+#sales > article > footer {
+  padding: 12px;
+  background-color: #EEEEEE;
 }
+
 #sales span {
-    font-size: 25px;
-    line-height: 27px;
- 
+  font-size: 25px;
+  line-height: 27px;
 }
+
 .right {
-    border-radius: 1.5rem;;
-    background-color: green;
-    color: white;
-    padding: 0 1rem;
-    float: right;
+  border-radius: 1.5rem;
+  background-color: #51D275;
+  color: white;
+  padding: 0 1rem;
+  float: right;
 }
+
 .right.sale {
-    background-color: #DC9730;
+  background-color: #DC9730;
 }
 
 #your-style {
-    padding: 0 1rem;
-}
-#your-style * {
-    width: 100%;
-    text-align: center;
+  padding: 0 1rem;
 }
 
+#your-style * {
+  width: 100%;
+  text-align: center;
+}
 
 .opaque {
-    opacity: 0.5;
+  opacity: 0.5; /* 0 - 1*/
 }
+
 .styles {
-    min-height: 5rem;
-    padding-top: 2rem;
-    color: white;
-    margin-bottom: 1rem;
+  min-height: 5rem;
+  padding-top: 2rem;
+  color: white;
+  margin-bottom: 1rem;
 }
+
 .styles span {
-    font-size: 1.5rem;
-    text-shadow: .1rem .1rem  black;
+  font-size: 1.5rem;
+  text-shadow: black .1rem .1rem;
 }
+
 .industrial {
-    background-image: url('./lovt/Rectangle\ 11.png');
+  background-image: url('./lovt/Rectangle\ 11.png');
 }
+
 .modern {
-    background-image: url('./lovt/Rectangle\ 12.png');
+  background-image: url('./lovt/Rectangle\ 12.png');
 }
+
 .classic {
-    background-image: url('./lovt/Rectangle\ 13.png');
+  background-image: url('./lovt/Rectangle\ 13.png');
 }
 
 footer {
-    width: 100%;
-    padding: 1rem 1rem;
-    background-color: #333333;
+  width: 100%;
+  padding: 1rem 1rem;
+  background-color: #333333;
 }
+
 footer > #gmaps {
-    width: 100%;
+  width: 100%;
 }
+
+#contacts {
+  color: white;
+  text-align: center;
+  vertical-align: center;
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media (min-width: 600px) {
+  #sales > article {
+    width: 40%;
+    display: inline-block;
+  }
+
+  #sales > article:last-child {
+    float: right;
+  }
+
+  footer > #gmaps {
+    width: 40%;
+    display: inline-block;
+  }
+
+  footer > #contacts {
+    width: 40%;
+    text-align: start;
+    display: inline-block;
+    margin-left: 18%;
+  }
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media (min-width: 768px) {
+  body {
+    max-width: 768px;
+    margin: 0 auto;
+  }
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media (min-width: 992px) {
+  body {
+    max-width: 992px;
+  }
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media (min-width: 1200px) {
+}
+
+/* Seletores por classe */
+/* .styles {
+  opacity: 0.5;
+} */
+
+/* Seletores por ID */
+/* #primeira {
+  opacity: 1;
+} */
+
+/* Seletores por descendência */
+/* #your-style img {
+  opacity: 0.5;
+} */
+
+/* Seletores por child (filhos) */
+/* #your-style > img {
+  opacity: 0.2;
+} */
